examples/test/testpolicy13249.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13249
  namespace: namespace156
spec:
  podSelector:
    matchLabels:
      key9: value44
      key34: value2
      key35: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value10
      podSelector:
        matchLabels:
          key39: value32
          key23: value17
          key13: value3
